두 모듈간의 의존성 설정

--- a/module-api/build.gradle
+++ b/module-api/build.gradle
@@ -23,8 +23,11 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    implementation project(':module-common')    //root project -> settings.gradle에 선선한 값과 동일
 }
 
 tasks.named('test') {
     useJUnitPlatform()
 }
+tasks.register("prepareKotlinBuildScriptModel") { }
