--- a/module-api/src/main/resources/application.yaml
+++ b/module-api/src/main/resources/application.yaml
@@ -1,1 +1,20 @@
-
+spring:
+  main:
+    allow-bean-definition-overriding: true
+  datasource:
+    url : ${LOCAL_DB_URL}
+    username : ${LOCAL_DB_USERNAME}
+    password : ${LOCAL_DB_PASSWORD}
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    database: mysql
+    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
+        jdbc:
+          time_zone: Asia/Seoul
