--- a/module-api/src/main/resources/application-local.yaml
+++ b/module-api/src/main/resources/application-local.yaml
@@ -18,3 +18,6 @@ spring:
         use_sql_comments: true
         jdbc:
           time_zone: Asia/Seoul
+  config:
+    activate:
+      on-profile: local
