--- a/feign/build.gradle
+++ b/feign/build.gradle
@@ -21,6 +21,7 @@ repositories {
 ext {
     // Feign
     set('springCloudVersion', '2021.0.4')
+    set('commonsLangVersion', '3.12.0')
 }
 
 dependencyManagement {
@@ -37,6 +38,9 @@ dependencies {
 
     // Feign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    // StringUtils
+    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
 
 }
 
